--- a/_posts/2019-08-26-test.markdown
+++ b/_posts/2019-08-26-test.markdown
@@ -1,11 +1,6 @@
 ---
 layout: post
 title:  "Hello World"
-categories: test
 ---
 
-{% highlight python %}
-def hello_world():
-    print "Hello World!"
-{% endhighlight %}
-
+something
